--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <a href="./index.html" class="logo link"><span class="first-part-logo">Web</span>Studio</a>
         <ul class="navigation list ">
           <li class="item">
-            <a href="./index.html" class="current-tab link">Студия</a>
+            <a href="./index.html" class="link">Студия</a>
           </li>
           <li class=" item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+            <a href="./portfolio.html" class="current-tab link">Портфолио</a>
           </li>
           <li class=" item">
             <a href="" class="link">Контакты</a>
@@ -34,16 +34,26 @@
         </ul>
       </nav>
       <ul class="contacts list">
+
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">
+            <svg class="logo-mail" width="16" height="12">
+              <use href="./image/symbol-defs.svg#icon-envelope">
+              </use>
+            </svg>
+            info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">
+            <svg class="logo-phone" width="10" height="16">
+              <use href="./image/symbol-defs.svg#icon-smartphone">
+              </use>
+            </svg>
+            +38 096 111 11 11</a>
         </li>
       </ul>
     </div>
   </header>
-
   <main>
 
     <section class="hero">
@@ -57,6 +67,13 @@
       <div class="container">
         <ul class="features list">
           <li class="item">
+            <div class="thumb">
+              <svg class="svg-features" width="70" height="70">
+                <use href="./image/symbol-defs.svg#icon-antenna">
+                </use>
+              </svg>
+            </div>
+
             <h3 class="title">Внимание к деталям</h3>
             <p class="description">
               Идейные соображения, а также начало повседневной работы по
@@ -64,6 +81,12 @@
             </p>
           </li>
           <li class="item">
+            <div class="thumb">
+              <svg class="logo-phone" width="70" height="70">
+                <use href="./image/symbol-defs.svg#icon-clock">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Пунктуальность</h3>
             <p class="description">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -71,6 +94,12 @@
             </p>
           </li>
           <li class="item">
+            <div class="thumb">
+              <svg class="logo-phone" width="70" height="70">
+                <use href="./image/symbol-defs.svg#icon-diagram">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Планирование</h3>
             <p class="description">
               Равным образом консультация с широким активом в значительной
@@ -78,6 +107,12 @@
             </p>
           </li>
           <li class="item">
+            <div class="thumb">
+              <svg class="svg-features" width="70" height="70">
+                <use href="./image/symbol-defs.svg#icon-astronaut">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Современные технологии</h3>
             <p class="description">
               Значимость этих проблем настолько очевидна, что реализация
@@ -114,21 +149,58 @@
             <img src="./image/command1.jpg" alt="Улыбающийся брюнет в очках и с бородой" width="270" />
             <h3 class="name">Игорь Демьяненко</h3>
             <p class="description">Product Designer</p>
+            <ul>
+              <li>
+                <a href="">
+                  <svg class="logo-phone" width="10" height="16">
+                    <use href="./image/symbol-defs.svg#icon-smartphone">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg class="logo-phone" width="10" height="16">
+                    <use href="./image/symbol-defs.svg#icon-smartphone">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg class="logo-phone" width="10" height="16">
+                    <use href="./image/symbol-defs.svg#icon-smartphone">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg class="logo-phone" width="10" height="16">
+                    <use href="./image/symbol-defs.svg#icon-smartphone">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <img src="./image/command2.jpg" alt="Улыбающаяся блондинка с белоснежными зубами" width="270" />
             <h3 class="name">Ольга Репина</h3>
             <p class="description">Frontend Developer</p>
+            <ul></ul>
           </li>
           <li class="item">
             <img src="./image/command3.jpg" alt="Улыбающийся шатен с щетиной смотрит в сторону" width="270" />
             <h3 class="name">Николай Тарасов</h3>
             <p class="description">Marketing</p>
+            <ul></ul>
           </li>
           <li class="item">
             <img src="./image/command4.jpg" alt="Ухмыляющийся брюнет в очках и с бородой" width="270" />
             <h3 class="name">Николай Тарасов</h3>
             <p class="description">UI Designer</p>
+            <ul></ul>
           </li>
 
         </ul>
