--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,22 @@
         </ul>
       </nav>
       <ul class="contacts list">
+
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">
+            <svg class="logo-mail" width="16" height="12">
+              <use href="./image/symbol-defs.svg#icon-envelope">
+              </use>
+            </svg>
+            info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">
+            <svg class="logo-phone" width="10" height="16">
+              <use href="./image/symbol-defs.svg#icon-smartphone">
+              </use>
+            </svg>
+            +38 096 111 11 11</a>
         </li>
       </ul>
     </div>
