--- a/index.html
+++ b/index.html
@@ -149,35 +149,35 @@
             <img src="./image/command1.jpg" alt="Улыбающийся брюнет в очках и с бородой" width="270" />
             <h3 class="name">Игорь Демьяненко</h3>
             <p class="description">Product Designer</p>
-            <ul>
-              <li>
-                <a href="">
-                  <svg class="logo-phone" width="10" height="16">
-                    <use href="./image/symbol-defs.svg#icon-smartphone">
+            <ul class="list social-networks">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="">
-                  <svg class="logo-phone" width="10" height="16">
-                    <use href="./image/symbol-defs.svg#icon-smartphone">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter">
                     </use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="">
-                  <svg class="logo-phone" width="10" height="16">
-                    <use href="./image/symbol-defs.svg#icon-smartphone">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook">
                     </use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="">
-                  <svg class="logo-phone" width="10" height="16">
-                    <use href="./image/symbol-defs.svg#icon-smartphone">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin">
                     </use>
                   </svg>
                 </a>
@@ -188,21 +188,140 @@
             <img src="./image/command2.jpg" alt="Улыбающаяся блондинка с белоснежными зубами" width="270" />
             <h3 class="name">Ольга Репина</h3>
             <p class="description">Frontend Developer</p>
-            <ul></ul>
+            <ul class="list social-networks">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <img src="./image/command3.jpg" alt="Улыбающийся шатен с щетиной смотрит в сторону" width="270" />
             <h3 class="name">Николай Тарасов</h3>
             <p class="description">Marketing</p>
-            <ul></ul>
+            <ul class="list social-networks">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <img src="./image/command4.jpg" alt="Ухмыляющийся брюнет в очках и с бородой" width="270" />
             <h3 class="name">Николай Тарасов</h3>
             <p class="description">UI Designer</p>
-            <ul></ul>
+            <ul class="list social-networks">
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="link-social-networks">
+                  <svg class="logo-links" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
 
+        </ul>
+      </div>
+    </section>
+
+
+    <section class="section">
+      <div class="container">
+        <ul class="partners list">
+          <li>
+            <a href="" class="link-partner">
+              <svg class="partner-logo" width="41px" height="46.7">
+                <use href="./image/symbol-defs.svg#icon-group1">
+                </use>
+              </svg>
+            </a>
+          </li>
+
+          <li>
+
+          </li>
         </ul>
       </div>
     </section>
