--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <a href="./index.html" class="logo link"><span class="first-part-logo">Web</span>Studio</a>
         <ul class="navigation list ">
           <li class="item">
-            <a href="./index.html" class="link">Студия</a>
+            <a href="./index.html" class="current-tab link">Студия</a>
           </li>
           <li class=" item">
-            <a href="./portfolio.html" class="current-tab link">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li class=" item">
             <a href="" class="link">Контакты</a>
@@ -38,7 +38,7 @@
         <li class="item">
           <a href="mailto:info@devstudio.com" class="link">
             <svg class="logo-mail" width="16" height="12">
-              <use href="./image/symbol-defs.svg#icon-envelope">
+              <use href="./image/icons.svg#icon-envelope">
               </use>
             </svg>
             info@devstudio.com</a>
@@ -46,7 +46,7 @@
         <li class="item">
           <a href="tel:+380961111111" class="link">
             <svg class="logo-phone" width="10" height="16">
-              <use href="./image/symbol-defs.svg#icon-smartphone">
+              <use href="./image/icons.svg#icon-smartphone">
               </use>
             </svg>
             +38 096 111 11 11</a>
@@ -69,7 +69,7 @@
           <li class="item">
             <div class="thumb">
               <svg class="svg-features" width="70" height="70">
-                <use href="./image/symbol-defs.svg#icon-antenna">
+                <use href="./image/icons.svg#icon-antenna">
                 </use>
               </svg>
             </div>
@@ -83,7 +83,7 @@
           <li class="item">
             <div class="thumb">
               <svg class="logo-phone" width="70" height="70">
-                <use href="./image/symbol-defs.svg#icon-clock">
+                <use href="./image/icons.svg#icon-clock">
                 </use>
               </svg>
             </div>
@@ -96,7 +96,7 @@
           <li class="item">
             <div class="thumb">
               <svg class="logo-phone" width="70" height="70">
-                <use href="./image/symbol-defs.svg#icon-diagram">
+                <use href="./image/icons.svg#icon-diagram">
                 </use>
               </svg>
             </div>
@@ -109,7 +109,7 @@
           <li class="item">
             <div class="thumb">
               <svg class="svg-features" width="70" height="70">
-                <use href="./image/symbol-defs.svg#icon-astronaut">
+                <use href="./image/icons.svg#icon-astronaut">
                 </use>
               </svg>
             </div>
@@ -153,7 +153,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    <use href="./image/icons.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
@@ -161,7 +161,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    <use href="./image/icons.svg#icon-twitter">
                     </use>
                   </svg>
                 </a>
@@ -169,7 +169,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    <use href="./image/icons.svg#icon-facebook">
                     </use>
                   </svg>
                 </a>
@@ -177,7 +177,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    <use href="./image/icons.svg#icon-linkedin">
                     </use>
                   </svg>
                 </a>
@@ -192,7 +192,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    <use href="./image/icons.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
@@ -200,7 +200,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    <use href="./image/icons.svg#icon-twitter">
                     </use>
                   </svg>
                 </a>
@@ -208,7 +208,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    <use href="./image/icons.svg#icon-facebook">
                     </use>
                   </svg>
                 </a>
@@ -216,7 +216,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    <use href="./image/icons.svg#icon-linkedin">
                     </use>
                   </svg>
                 </a>
@@ -231,7 +231,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    <use href="./image/icons.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
@@ -239,7 +239,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    <use href="./image/icons.svg#icon-twitter">
                     </use>
                   </svg>
                 </a>
@@ -247,7 +247,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    <use href="./image/icons.svg#icon-facebook">
                     </use>
                   </svg>
                 </a>
@@ -255,7 +255,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    <use href="./image/icons.svg#icon-linkedin">
                     </use>
                   </svg>
                 </a>
@@ -270,7 +270,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-instagram">
+                    <use href="./image/icons.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
@@ -278,7 +278,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-twitter">
+                    <use href="./image/icons.svg#icon-twitter">
                     </use>
                   </svg>
                 </a>
@@ -286,7 +286,7 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-facebook">
+                    <use href="./image/icons.svg#icon-facebook">
                     </use>
                   </svg>
                 </a>
@@ -294,14 +294,13 @@
               <li class="item">
                 <a href="" class="link-social-networks">
                   <svg class="logo-links" width="20px" height="20px">
-                    <use href="./image/symbol-defs.svg#icon-linkedin">
+                    <use href="./image/icons.svg#icon-linkedin">
                     </use>
                   </svg>
                 </a>
               </li>
             </ul>
           </li>
-
         </ul>
       </div>
     </section>
@@ -309,18 +308,56 @@
 
     <section class="section">
       <div class="container">
+        <h3 class="section-title">Постоянные клиенты</h3>
         <ul class="partners list">
           <li>
             <a href="" class="link-partner">
-              <svg class="partner-logo" width="41px" height="46.7">
-                <use href="./image/symbol-defs.svg#icon-group1">
+              <svg class="partner-logo" width="106px" height="60px">
+                <use href="./image/icons.svg#icon-logo1">
                 </use>
               </svg>
             </a>
           </li>
 
           <li>
-
+            <a href="" class="link-partner">
+              <svg class="partner-logo" width="106px" height="60px">
+                <use href="./image/icons.svg#icon-logo2">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-partner">
+              <svg class="partner-logo" width="106px" height="60px">
+                <use href="./image/icons.svg#icon-logo3">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-partner">
+              <svg class="partner-logo" width="106px" height="60px">
+                <use href="./image/icons.svg#icon-logo4">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-partner">
+              <svg class="partner-logo" width="106px" height="60px">
+                <use href="./image/icons.svg#icon-logo5">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link-partner">
+              <svg class="partner-logo" width="106px" height="60px">
+                <use href="./image/icons.svg#icon-logo6">
+                </use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -331,18 +368,57 @@
   <footer class="footer">
 
     <div class="container">
-      <a href="./index.html" class="logo link "><span class="first-part-logo">Web</span>Studio</a>
-      <address>
-        <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+      <div class="left-footer">
+        <a href="./index.html" class="logo link "><span class="first-part-logo">Web</span>Studio</a>
+        <address>
+          <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-telephone link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="center-footer">
+        <h3 class="footer-title">Присоединяйтесь</h3>
+        <ul class="list social-networks ">
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-instagram">
+                </use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-telephone link">+38 096 111 11 11</a>
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-twitter">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-facebook">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-linkedin">
+                </use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 
