--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <li class="item">
           <a href="mailto:info@devstudio.com" class="link">
             <svg class="logo-mail" width="16" height="12">
-              <use href="./image/symbol-defs.svg#icon-envelope">
+              <use href="./image/icons.svg#icon-envelope">
               </use>
             </svg>
             info@devstudio.com</a>
@@ -46,7 +46,7 @@
         <li class="item">
           <a href="tel:+380961111111" class="link">
             <svg class="logo-phone" width="10" height="16">
-              <use href="./image/symbol-defs.svg#icon-smartphone">
+              <use href="./image/icons.svg#icon-smartphone">
               </use>
             </svg>
             +38 096 111 11 11</a>
@@ -162,20 +162,60 @@
   <footer class="footer">
 
     <div class="container">
-      <a href="./index.html" class="logo link "><span class="first-part-logo">Web</span>Studio</a>
-      <address>
-        <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+      <div class="left-footer">
+        <a href="./index.html" class="logo link "><span class="first-part-logo">Web</span>Studio</a>
+        <address>
+          <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-telephone link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="center-footer">
+        <h3 class="footer-title">Присоединяйтесь</h3>
+        <ul class="list social-networks ">
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-instagram">
+                </use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-telephone link">+38 096 111 11 11</a>
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-twitter">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-facebook">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link-social-networks">
+              <svg class="logo-links" width="20px" height="20px">
+                <use href="./image/icons.svg#icon-linkedin">
+                </use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
+
 </body>
 
 </html>
