--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
     </section>
 
     <section class="section">
+      <h2 class="visually-hidden">Преимущества</h2>
       <div class="container">
         <ul class="features list">
           <li class="item">
             <div class="thumb">
-              <svg class="svg-features" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./image/icons.svg#icon-antenna">
                 </use>
               </svg>
@@ -82,7 +83,7 @@
           </li>
           <li class="item">
             <div class="thumb">
-              <svg class="logo-phone" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./image/icons.svg#icon-clock">
                 </use>
               </svg>
@@ -95,7 +96,7 @@
           </li>
           <li class="item">
             <div class="thumb">
-              <svg class="logo-phone" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./image/icons.svg#icon-diagram">
                 </use>
               </svg>
@@ -108,7 +109,7 @@
           </li>
           <li class="item">
             <div class="thumb">
-              <svg class="svg-features" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./image/icons.svg#icon-astronaut">
                 </use>
               </svg>
